[package]
name = "solana-sbf-rust-poseidon"
documentation = "https://docs.rs/solana-sbf-rust-poseidon"
version = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-program = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
